# OGHCollector

./: .env  .eslintcache  .eslintignore  .flowconfig  .gitignore  Cargo.toml  Dockerfile  README.md  ROADMAP.md  diesel.toml  docker-compose.yaml  docker-entrypoint.sh  eslint.config.mjs  oghcollector.code-workspace  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.mjs  update_db.sh
.github/workflows/: tests.yml
crates/collector/: Cargo.toml
crates/collector/src/: analyzer.rs  anygitclient.rs  config.rs  gitclient.rs  github.rs  main.rs  pypi.rs  security.rs
crates/collector/src/clients/: github.rs  gitlab.rs  mod.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: config.rs  main.rs  tools.rs
crates/oghutils/: Cargo.toml
crates/oghutils/src/: version.rs
crates/server/: Cargo.toml
crates/server/src/: build.rs  config.rs  main.rs  minijinja_renderer.rs  scheduler.rs  state.rs  utils.rs
crates/server/src/middlewares/: mod.rs  not_found.rs  trusted_proxy.rs
crates/server/src/routes/: api_doc.rs  atlas.rs  committer.rs  committers.rs  common.rs  dashboard.rs  doodba_converter.rs  doodba_tools.rs  favorites.rs  logs.rs  mcp_info.rs  mod.rs  module.rs  modules.rs  osv.rs  pack.rs  robots.rs  sitemap.rs
crates/server/src/routes/api/: mod.rs
crates/server/src/routes/api/v1/: mod.rs  module.rs  repository.rs  search.rs
crates/sqlitedb/: Cargo.toml  schema.patch
crates/sqlitedb/src/: lib.rs  schema.rs
crates/sqlitedb/src/models/: author.rs  committer.rs  dependency.rs  dependency_module.rs  dependency_osv.rs  dependency_type.rs  gh_organization.rs  gh_repository.rs  maintainer.rs  mod.rs  module.rs  module_author.rs  module_code_analysis.rs  module_committer.rs  module_committer_period.rs  module_controller.rs  module_maintainer.rs  module_model.rs  module_model_field.rs  module_model_method.rs  module_record.rs  module_security_warning.rs  module_version.rs  module_view.rs  pull_request.rs  pull_request_history.rs  system_event.rs  system_event_type.rs
crates/sqlitedb/src/utils/: date.rs  mod.rs
docs/: development.md
files/: pip_names.txt
migrations/2026-03-07-025905-0000_base_models/: down.sql  up.sql
migrations/2026-07-04-030454-0000_fix_pull_request_prid_unique/: down.sql  up.sql
migrations/2026-07-04-071055-0000_add_module_committer_period/: down.sql  up.sql
migrations/2026-07-04-074053-0000_add_module_code_analysis/: down.sql  up.sql
migrations/2026-07-04-081347-0000_add_module_code_analysis_llm_context/: down.sql  up.sql
migrations/2026-07-05-164048-0000_add_module_version/: down.sql  up.sql
migrations/2026-07-05-170000-0000_add_system_event_severity/: down.sql  up.sql
migrations/2026-07-06-173706-0000_add_module_install_usage/: down.sql  up.sql
migrations/2026-07-06-190000-0000_add_module_committer_line_stats/: down.sql  up.sql
migrations/2026-07-06-200000-0000_add_module_record/: down.sql  up.sql
migrations/2026-07-07-000000-0000_add_module_security_warning/: down.sql  up.sql
migrations/2026-07-07-010000-0000_add_module_controller/: down.sql  up.sql
migrations/2026-07-09-141907-0000_add_pull_request_ci_status/: down.sql  up.sql
migrations/2026-07-09-165050-0000_add_pull_request_history/: down.sql  up.sql
migrations/2026-07-10-163243-0000_add_pull_request_last_message/: down.sql  up.sql
migrations/2026-07-11-022858-0000_add_module_icon/: down.sql  up.sql
scripts/: build.mjs
static/: site.webmanifest
web/js/: main.mjs
web/js/components/: atlas.mjs  committer-search.mjs  doodba-converter.mjs  doodba-dependency-resolver.mjs  doodba-migration-plan.mjs  logs-viewer.mjs  main-example.mjs  module-counter.mjs  module-search.mjs  search-dropdown.mjs
web/js/pages/: api-doc.mjs  atlas.mjs  committer.mjs  committers.mjs  dashboard.mjs  doodba-converter.mjs  favorites.mjs  logs.mjs  mcp-info.mjs  module.mjs  modules.mjs  osv.mjs  pack.mjs
web/js/utils/: drag-panel-processing.mjs  favorites-store.mjs  lazy-tab.mjs  module-tile.mjs  pack-export.mjs  search-modal.mjs
web/scss/: main.scss
web/scss/bootstrap/: custom.scss  defaults.scss  utilities.scss  variables.scss
web/scss/components/: _module-tile.scss  _search-dropdown.scss  atlas.scss  committer-search.scss  doodba-converter.scss  doodba-dependency-resolver.scss  doodba-migration-plan.scss  logs-viewer.scss  main-example.scss  module-counter.scss  module-search.scss
web/scss/pages/: api-doc.scss  committer.scss  committers.scss  dashboard.scss  doodba-converter.scss  favorites.scss  logs.scss  mcp-info.scss  module.scss  modules.scss  osv.scss  pack.scss
web/templates/: base_layout.html  minimal_layout.html
web/templates/pages/: api_doc.html  atlas.html  committer.html  committers.html  dashboard.html  doodba_converter.html  error.html  favorites.html  (+6 more)
(+12 files in other folders)
