[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = '2021'
version = "0.1.0"
authors = ["Alexandre D. <dev@redneboa.es>"]
description = "Odoo Module Metadata"
documentation = "https://ommd.info"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
r2d2 = "0.8"
r2d2_sqlite = "0.23"
rusqlite = { version = "0.30", features = ["bundled", "array"] }
actix-web = "4"
actix-files = "0.6"
actix-utils = "3"
actix-web-lab = "0.20"
actix-cors = "0.6"
actix-service = "2.0"
actix-rt = "2.7"
actix-csrf = "0.7"
actix-session = { version = "0.8", features = ["cookie-session"] }
actix-multipart = "0.7"
env_logger = "0.10"
log = "0.4"
array_tool = "1"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio_schedule = "0.3"
argparse = "0.2" 
pyo3 = { version = "0.19", features = ["auto-initialize"] }
chrono = { version = "0.4" }
chrono-tz = "0.8"
cached = { version = "0.46" }
minijinja = { version = "1", features = ["loader"] }
minijinja-autoreload = "1"
config = "0.13"
url = "2"
lazy_static = "1"
fs_extra = "1.3"
regex = "1.10"
duct = "1.1"