[package]
name = "mcp"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
sqlitedb = { path = "../sqlitedb" }
oghutils = { path = "../oghutils" }
diesel = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
rmcp.workspace = true
axum.workspace = true
cached.workspace = true
