[package]
name = "sqlitedb"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
oghutils = { path = "../oghutils" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
diesel = { workspace = true }
diesel_migrations.workspace = true
